Changed api that is used for authentication